--- a/package.json
+++ b/package.json
@@ -11,27 +11,20 @@
   "license": "MIT",
   "scripts": {
     "test": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
-    "build": "yarn run build:server && yarn run build:client",
-    "build:server": "webpack --config webpack.server.js",
-    "build:client": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "dev": "nodemon",
     "postinstall": "node scripts/fix-semantic.js",
     "start": "node -r dotenv/config dist/index.js"
   },
   "devDependencies": {
     "@intervolga/optimize-cssnano-plugin": "1.0.4",
-    "@types/auth0-js": "^9.10.2",
     "@types/bluebird": "3.5.26",
     "@types/body-parser": "^1.16.7",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.11.1",
-    "@types/express-jwt": "^0.0.42",
-    "@types/express-ws": "^3.0.0",
     "@types/fs-extra": "^8.0.0",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.116",
     "@types/moment-timezone": "^0.5.9",
-    "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^12.6.6",
     "@types/pdfmake": "^0.1.1",
@@ -41,23 +34,22 @@
     "@types/react-redux": "^7.1.1",
     "@types/react-router-config": "^5.0.0",
     "@types/react-router-dom": "^4.2.6",
-    "@types/react-router-redux": "^5.0.15",
     "@types/react-widgets": "^4.1.5",
     "@types/react-widgets-moment": "^4.0.1",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
     "@types/ws": "^6.0.1",
-    "awesome-typescript-loader": "^4",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-cli": "^7.0.0-beta.3",
     "babel-loader": "^8.0.6",
     "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "cache-loader": "^1.2.0",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.1",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.0.0",
@@ -66,45 +58,37 @@
     "less-loader": "^5.0.0",
     "less-plugin-autoprefix": "^2.0.0",
     "nodemon": "^1.15.1",
-    "react-hot-loader": "^4.0.0-beta.3",
-    "source-map-support": "^0.5.9",
-    "style-loader": "^0.23.1",
+    "react-hot-loader": "^4.12.14",
+    "source-map-support": "^0.5.13",
+    "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.1.0",
-    "ts-node": "^8.3.0",
-    "tsconfig-paths": "^3.1.3",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "tslint-config-prettier": "^1.9.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^2.0.6",
-    "webpack-hot-middleware": "^2.20.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
     "webpack-jarvis": "^0.3.0",
-    "webpack-merge": "^4.1.4",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "auth0-js": "^9.3.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.3",
-    "body-parser": "^1.18.3",
+    "connected-react-router": "^6.5.2",
     "csv-stringify": "^5.3.0",
     "dotenv": "^8.0.0",
-    "express": "^4.16.3",
-    "express-jwt": "^5.3.1",
-    "express-ws": "^4.0.0",
     "fs-extra": "^8.1.0",
     "immutability-helper": "^3.0.1",
     "jsonwebtoken": "^8.2.1",
-    "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
-    "multer": "^1.3.1",
-    "mysql2": "^1.6.4",
     "pdfmake": "^0.1.36",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -115,7 +99,6 @@
     "react-router": "^5.0.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-router-redux": "^5.0.0-alpha.8",
     "react-widgets": "^4.2.6",
     "react-widgets-moment": "^4.0.20",
     "redux": "^4.0.4",
@@ -129,6 +112,7 @@
     "sequelize": "^4.41.2",
     "sequelize-typescript": "^0.6.6",
     "web-animations-js": "^2.3.1",
+    "webpack-dev-server": "^3.8.2",
     "ws": "^7.1.0"
   },
   "stylelint": {
